kde4libs (4:4.8.4-0r0) UNRELEASED; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Update symbol files.

  [ José Manuel Santamaría Lema ]
  * Add watch file.
  * Update patches:
    - refresh python3-support-bytecode.patch

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 27 May 2012 12:10:37 +0200

kde4libs (4:4.8.3-1) experimental; urgency=low

  * New upstream release.
    - FindXine.cmake doesn't call xine-config anymore (Closes: #656914)
  * Team upload.

  [ Eshat Cakar ]
  * Add myself to uploaders.
  * Update installed files.
  * Update not-installed files.
  * Remove upstream_better-check-for-return-values-of-m_protocols.value.patch
    (applied upstream).

  [ José Manuel Santamaría Lema ]
  * Update symbols files.
  * Bump Standards-Version to 3.9.3, no changes needed.
  * Remove -DBUILD_libkactivities=OFF from the cmake parameters, no longer
    needed.

  [ Pino Toscano ]
  * libsolid4: suggest media-player-info on Linux archs.

  [ Modestas Vainius ]
  * Drop upstream_Add-missing-include.patch, stolen from upstream.
  * DEP-3'ize python3-support-bytecode.patch.
  * Strip Debian revision from symbol versions in symbol files.

 -- Modestas Vainius <modax@debian.org>  Sat, 26 May 2012 18:26:57 +0300

kde4libs (4:4.7.4-6) unstable; urgency=low

  * Team upload.

  [ Scott Kitterman ]
  * Confirm symbols files for all archs except amd64 and s390x
  * Add support to cmake/modules/PythonMacros.cmake for the environment
    variable $PYTHONDONTWRITEBYTECODE to work around the lack of support for
    Python 3 byte code compilation (Closes: #672552)
    - Added in debian/patches/python3-support-bytecode.patch
    - Thanks to Colin Watson for the patch

 -- Scott Kitterman <scott@kitterman.com>  Sat, 19 May 2012 15:36:15 -0400

kde4libs (4:4.7.4-5) unstable; urgency=low

  * Team upload.

  [ Pino Toscano ]
  * Make kdelibs5-dbg strictly depend on libkdecore5, to avoid a mismatch