@@ -12,7 +12,7 @@ overridden by adding new files to /etc/kde4 by the sysadm.
 
 --- a/kdecore/kernel/kstandarddirs.cpp
 +++ b/kdecore/kernel/kstandarddirs.cpp
-@@ -1174,6 +1174,10 @@ QStringList KStandardDirs::KStandardDirs
+@@ -1176,6 +1176,10 @@ QStringList KStandardDirs::KStandardDirs
                          if ((local || testdir.exists()) && !candidates.contains(path))
                              candidates.append(path);
                      }
