@@ -34,7 +34,7 @@ Last-Update: 2011-05-30
  int build_link(const char* tmp, const char *tmp_prefix, const char *kde_prefix);
 --- a/cmake/modules/FindKDE4Internal.cmake
 +++ b/cmake/modules/FindKDE4Internal.cmake
-@@ -1219,8 +1219,8 @@ if (CMAKE_COMPILER_IS_GNUCXX)
+@@ -1221,8 +1221,8 @@ if (CMAKE_COMPILER_IS_GNUCXX)
     endif (CMAKE_SYSTEM_NAME MATCHES Linux OR CMAKE_SYSTEM_NAME STREQUAL GNU)
  
     if (CMAKE_SYSTEM_NAME STREQUAL GNU)
