@@ -9,6 +9,7 @@ kde4libs (4:4.8.4-0r0) UNRELEASED; urgency=low
   * Add watch file.
   * Update patches:
     - refresh python3-support-bytecode.patch
+    - refresh various patches to make them apply without any offset.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 27 May 2012 12:10:37 +0200
 
